--- a/style.css
+++ b/style.css
@@ -17,11 +17,6 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  cursor: pointer;
-  transition: opacity 0.3;
-}
-
 img {
   display: block;
   max-width: 100%;
@@ -59,8 +54,31 @@ img {
 
 .galeria {
   background-color: #ffc9d6;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: normal;
 }
-
 .navigation {
   display: flex;
+}
+
+.bady {
+  background-color: #ffc9d6;
+}
+
+.navg {
+  padding-left: 20px;
+  padding-top: 30px;
+}
+
+.nadg {
+  color: white;
+  justify-content: center;
+  display: flex;
+  font-size: 50px;
+}
+
+.po {
+  font-size: 20px;
+  color: white;
 }
